# Alasio

./: .gitattributes  .gitignore  README.md  gui.py  pyproject.toml  requirements.txt  setup.py
ExampleMod/module/: __init__.py  main.py
alasio/assets/: folder.py  manager.py  model.py
alasio/assets_dev/: extract.py  extract_alas.py  extract_src.py  parse.py
alasio/backend/: app.py  backend.py  cert.py  lifespan.py  main.py  supervisor.py  topic.py  ws.py
alasio/backport/: __init__.py  batch.py  listify.py  literal.py  once.py  patch.py  threading_ext.py
alasio/base/: base.py  cache.py  codegen.py  download.py  env.py  exception.py  filter.py  pool.py  pretty.py  proc.py  servertime.py  state.py  timer.py
alasio/config/: base.py  config_generated.py  const.py  exception.py  group_base.py  group_proxy.py  queue.index.json  task.index.json
alasio/config_dev/: __main__.py  configgen.py  gen_alasio.py  gen_config.py  gen_cross.py  gen_index.py  tasks_model.py
alasio/db/: conn.py  field.py  genexample.py  table.py  validate.py
alasio/deploy_dev/: get_version.py  simple_pip.py  whl_record.py
alasio/device/: base.py  config.py  serialstr.py
alasio/ext/: backport.py  cache.py  codegen.py  deep.py  download.py  env.py  inflect.py  patch.py  perf.py  pool.py  reactive.py  singleton.py  timez.py
alasio/logger/: error.py  logger.py  utils.py  writer.py
alasio/spider/: deduplicate.py  spawner.py
alasio/testing/: drop.py  managed_process.py  patch_time.py  timeout.py
alasio/utils/: atomic.py  download.py  path.py  pathstr.py  pool.py
doc/: browser_competibility.md  frontend_i18n.md  rich_backport.md
frontend/: .gitignore  .prettierignore  .prettierrc  package.json  pnpm-lock.yaml  postcss.config.ts  svelte.config.js  tailwind.config.js  vite.config.ts
frontend/src/: app.css
tests/backend/: import_testing.py  test_import.py
tests/backport/: test_backport.py  test_batch.py  test_listify.py  test_literal.py  test_once.py  test_py37_subprocess_communicate.py  test_rich.py  test_strenum.py  test_suppress.py  test_threadpool_executor_maxworker.py
tests/base/: test_inflect.py  test_servertime.py  test_state.py  test_state_game.py  (+1 more)
webapp/: .gitignore  components.json  electron-builder.yml  package.json  pnpm-lock.yaml  postcss.config.ts  tsconfig.json  vite.config.mts
(+742 files in other folders)
