[build-system]
requires = ["setuptools>=61.0", "msgspec"]
build-backend = "setuptools.build_meta"

[project]
name = "alasio"
version = "0.1.0"
description = "Mobile game bot framework abstracted from AzurLaneAutoScript and StarRailCopilot"
readme = "README.md"
requires-python = ">=3.8"
authors = [
    { name = "LmeSzinc" }
]
dependencies = [
    # alasio
    "msgspec",
    "PyYAML",
    "lxml",
    "httpx",
    # alasio/log
    "structlog>=25.5.0",
    # rich version is limited because we patched rich.trackback to enable exceptiongroup tracebacks on py<3.11
    # 14.1.0 is the minimum version to have exceptiongroup support
    # see alasio/ext/backport/__init__.py patch_rich_traceback_extract()
    "rich>=14.1.0,<=14.3.1",
    "exceptiongroup",
    "colorama",
]

[project.optional-dependencies]
image = [
    "numpy",
    "opencv-python-headless",
]
backend = [
    "hypercorn>=0.17.3",
    "trio",
    "starlette>=0.19.0",
    "PyJWT",
]
test = [
    "pytest",
    "pytest-trio",
]
all = ["alasio[image,backend,test]"]

[tool.setuptools]
packages = ["alasio"]

[tool.pytest.ini_options]
tmp_path_retention_count = 1
tmp_path_retention_policy = "failed"
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
]